# voxflow_trans

./: .env.example  .gitignore  .installation_complete  API_DOCUMENTATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_RULES.md  DEVELOPMENT_SUMMARY.md  DOCKER_SETUP.md  LICENSE  README-LAUNCHER.md  README.md  VoxFlow-Clean-Start.command  VoxFlow-Debug.command  VoxFlow-Install.command  VoxFlow-Local.command  VoxFlow-Reset.command  VoxFlow-Start.command  VoxFlow-Voxtral-Test.command  VoxFlow.command  docker-compose 2.yml  docker-compose.debug.yml  docker-compose.local.yml  docker-compose.yml  install-redis.command  start-dev.sh  voxtral-backend.md  voxtral-ui.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
_Backups_local/VoxFlow-v0.5-backup/: CHANGELOG.md  CLEAN-START-DOCUMENTATION.md  DEVELOPMENT_RULES.md  INTERNAL_TESTING.md  README.md  docker-compose.yml  tsconfig.json
_Backups_local/VoxFlow-v0.5-backup/frontend/: package.json
_Backups_local/VoxFlow-v0.5-backup/python-service/: requirements-docker.txt
backend/node-service/: .env.example  Dockerfile  jest.config.ts  package-lock.json  package.json
backend/node-service/src/: app.ts  server.ts
backend/python-service/: .env.example  =1.26.0  Dockerfile  pyproject.toml  pytest.ini  requirements-docker.txt  requirements.txt  safe_voxtral_test.py  test_two_phase_processing.py  test_voxtral_native.py
backend/python-service/app/: main.py
backend/python-service/app/api/endpoints/: config.py  health.py  transcribe.py
backend/python-service/app/core/: audio_processor.py  config.py  model_loader 2.py  model_loader.py  voxtral_engine 2.py  voxtral_engine.py
backend/python-service/app/models/: transcription.py
backend/python-service/app/services/: cleanup_service.py  progress_notifier.py  resource_monitor.py
backend/python-service/app/utils/: logging.py
backend/python-service/tests/: conftest.py  test_basic_functionality.py  test_integration_basic.py  test_overlap_removal.py
backend/python-service/tests/integration/: test_api_endpoints.py  test_audio_processor 2.py  test_audio_processor.py  test_voxtral_engine 2.py  test_voxtral_engine.py
config/: redis.conf
docs/: PROJECT_STRUCTURE.md
frontend/: .env.example  Dockerfile  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend_new/project/: index.html  package-lock.json  package.json
installers/: README.md  VoxFlow-Install.command  VoxFlow-Reset.command  VoxFlow-Start.command
plan/: Chunck-Verarbeitung.md  srt-implementation-prompt.md  voxtral-frontend.md  voxtral_info.md
(+90 files in other folders)
